# satnogs-id

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pyrightconfig.json
notebooks/m0/: Dockerfile.strf  gather_eval_set.py  make_dat.py  run_rffit.sh
satnogs_id/: __init__.py
satnogs_id/data/: __init__.py  build.py  dataset.py  publish.py
satnogs_id/id/: __init__.py  dat.py  eval.py  identify.py  nametag.py
satnogs_id/service/: __init__.py  app.py  forward.py
satnogs_id/shared/: __init__.py  api.py  config.py  geometry.py  waterfall.py
scripts/: build_and_push.py  dataset_card.md  identify_obs.py  patch_rffit.py
